--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			</div>
 			<ul>
 				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="#">Δημοτικό</a></li>
-				<li><a href="#">Γυμνάσιο</a></li>
-				<li><a href="#">Λύκειο</a></li>
+				<li><a href="Dimotiko.html">Δημοτικό</a></li>
+				<li><a href="Gimnasio.html">Γυμνάσιο</a></li>
+				<li><a href="Lykeio.html">Λύκειο</a></li>
 				<li><a href="#">Σχόλια</a></li>
 
 
