--- a/Dimotiko Register.html
+++ b/Dimotiko Register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>َAnimated Login Form</title>
-    <link rel="stylesheet" href="css/login-Dimotiko.css">
+    <link rel="stylesheet" href="css/Register-Dimotiko.css">
   </head>
   <body>
 
@@ -11,7 +11,14 @@
   <h1>Login</h1>
   <input type="text" name="" placeholder="Username">
   <input type="password" name="" placeholder="Password">
-  <input type="submit" name="" value="Login">
+  <input type="password" name="" placeholder="Repeat Password">
+  <input type="text" name="" placeholder="Email">
+  <select id="vathmida" name="Βαθμίδα">
+    <option value="Dimotiko">Δημοτικό</option>
+    <option value="Gimnasio">Γυμνάσιο</option>
+    <option value="Lykeio">Λύκειο</option>
+  </select>
+  <input type="submit" name="" value="Register">
 </form>
 
 
