--- a/Dimotiko.html
+++ b/Dimotiko.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>َAnimated Login Form</title>
-    <link rel="stylesheet" href="css/login-Dimotiko.css">
+    <link rel="stylesheet" href="css/Login-Dimotiko.css">
   </head>
   <body>
-
-<form class="box" action="index.html" method="post">
-  <h1>Login</h1>
-  <input type="text" name="" placeholder="Username">
-  <input type="password" name="" placeholder="Password">
-  <input type="submit" name="" value="Login">
-</form>
-
-
+    <form class="box" action="index.html" method="post">
+      <h1>Login</h1>
+      <input type="text" name="" placeholder="Username">
+      <input type="password" name="" placeholder="Password">
+      <input type="submit" name="" value="Login">
+    </form>
   </body>
 </html>
