--- a/Register.html
+++ b/Register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>َAnimated Login Form</title>
-    <link rel="stylesheet" href="css/Register-Dimotiko.css">
+    <link rel="stylesheet" href="css/Register.css">
   </head>
   <body>
 
