--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 				<li><a href="Dimotiko.html">Δημοτικό</a></li>
 				<li><a href="Gimnasio.html">Γυμνάσιο</a></li>
 				<li><a href="Lykeio.html">Λύκειο</a></li>
-				<li><a href="#">Σχόλια</a></li>
+				<li><a href="Login.html">Σύνδεση</a></li>
 
 
 			</ul>
