--- a/Register.html
+++ b/Register.html
@@ -8,19 +8,22 @@
   <body>
 
 <form class="box" action="index.html" method="post">
-  <h1>Login</h1>
+  <h1>Register</h1>
   <input type="text" name="" placeholder="Username">
   <input type="password" name="" placeholder="Password">
   <input type="password" name="" placeholder="Repeat Password">
   <input type="text" name="" placeholder="Email">
-  <select id="vathmida" name="Βαθμίδα">
+  <select class="custom-select" id="vathmida" name="Βαθμίδα">
+    <option value="Epilogi">Επέλεξε Βαθμίδα:</option>
     <option value="Dimotiko">Δημοτικό</option>
     <option value="Gimnasio">Γυμνάσιο</option>
     <option value="Lykeio">Λύκειο</option>
   </select>
   <input type="submit" name="" value="Register">
 </form>
-
+<div class="custom-select" style="width:200px;">
+  
+</div>
 
   </body>
 </html>
