--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 	<title>contact_us</title>
 	<link rel="stylesheet" type="text/css" href="css/contact_style.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 </div>
@@ -13,28 +14,20 @@
 				<li><a href="Dimotiko.html">Δημοτικό</a></li>
 				<li><a href="Gimnasio.html">Γυμνάσιο</a></li>
 				<li><a href="Lykeio.html">Λύκειο</a></li>
-				<li><a href="Login.html">Σύνδεση</a></li>
-
-
-			</ul>
-			
+				<li><button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Σύνδεση</button></li>
+			</ul>	
 	</div>
-
-
-		</div>
+</div>
 
 <body>
-
 	<div class="Media">
 		<ul>
-			
+			<br> <br> 
 			<li><a href="https://www.facebook.com/studentsforstudents.studentsforstudents.3"><i class="fa fa-facebook fa-1x" aria-hidden="true"></i></a></li>
 			<li><a href="https://www.instagram.com/stud_4_stud/?fbclid=IwAR0sp7QjrnuhzhOyy5cPRyMyIN4MXSTnoEy9k_7zoDkgx8cgdIANRUWKhAI"><i class="fa fa-instagram fa-1x" aria-hidden="true"></i></a></li>
-			
 		</ul>
-
 	</div>
-
+	
 	<div class="contact_title">
 		<h1>Επικοινωνήστε μαζί μας</h1>
 		<h2>Υποβολή ερώτησης</h2>
@@ -61,7 +54,44 @@
 
 
 	</div>
-
+	<div id="id01" class="modal">
+  
+		<form class="modal-content animate" action="/action_page.php" method="post">
+		  <div class="imgcontainer">
+			<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+			<img src="img_avatar2.png" alt="Avatar" class="avatar">
+		  </div>
+	  
+		  <div class="container">
+			<label for="uname"><b>Username</b></label>
+			<input type="text" placeholder="Enter Username" name="uname" required>
+	  
+			<label for="psw"><b>Password</b></label>
+			<input type="password" placeholder="Enter Password" name="psw" required>
+			  
+			<button type="submit">Login</button>
+			<label>
+			  <input type="checkbox" checked="checked" name="remember"> Remember me
+			</label>
+		  </div>
+	  
+		  <div class="container" style="background-color:#f1f1f1">
+			<button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+			<span class="psw">Forgot <a href="#">password?</a></span>
+		  </div>
+		</form>
+	  </div>
+	  <script>
+		// Get the modal
+		var modal = document.getElementById('id01');
+		
+		// When the user clicks anywhere outside of the modal, close it
+		window.onclick = function(event) {
+			if (event.target == modal) {
+				modal.style.display = "none";
+			}
+		}
+		</script>
 
 </body>
 </html>
