--- a/Register.html
+++ b/Register.html
@@ -19,7 +19,7 @@
     <option value="Gimnasio">Γυμνάσιο</option>
     <option value="Lykeio">Λύκειο</option>
   </select>
-  <input type="submit" name="" value="Register">
+  <input type="submit" name="" value="Εγγραφή">
 </form>
 <div class="custom-select" style="width:200px;">
   
