--- a/FAQ.html
+++ b/FAQ.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width">
-    <link href="FAQ.css" rel="stylesheet" />
+	<link rel="stylesheet" type="text/css" href="css/FAQ.css">
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
