--- a/Lykeio.html
+++ b/Lykeio.html
@@ -25,11 +25,13 @@
           </div>
             <nav>
               <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Κεντρική</a></li>
 				<li><a href="Dimotiko.html">Δημοτικό</a></li>
 				<li><a href="Gimnasio.html">Γυμνάσιο</a></li>
-				<li class="active"><a href="Lykeio.html">Λύκειο</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li class="current"><a href="Lykeio.html">Λύκειο</a></li>
+                <li><a href="contact.html">Επικοινωνία</a></li>
+                <li><button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Σύνδεση</button></li>
+
               </ul>
             </nav>
         </div>
