--- a/Dimotiko.html
+++ b/Dimotiko.html
@@ -72,21 +72,18 @@
                 <form class="message">
                   <div>
                     <label>Name:</label>
-                    <br />
+                    <br /><br />
                     <input id="input-name" type="text" size="44" placeholder="Enter your name..." required />
-                    <br />
-                    <br />
+                    <br /><br />
                     <label>Email:</label>
-                    <br />
+                    <br /><br />
                     <input id="input-email" type="email" size="44" placeholder="Enter your email..." required />
-                    <br />
-                    <br />
+                    <br /><br />
                     <label>Message:</label>
-                    <br />
+                    <br /><br />
                     <textarea id="faq-question" rows="10" cols="44" maxlength="420" wrap="soft" placeholder="Enter your query..." required></textarea>
-                    <br />
-                    <br />
-                    <input type="submit" class="btn" value="Submit" onclick="form.reset(); alert('Thanks for your question! I will get back to you as soon as I can.');">
+                    <br /><br />
+                    <input type="submit" class="btn" value="Submit" onclick="form.reset(); alert('Ευχαριστούμε για την ερώτηση! Θα επικοινωνήσουμε μαζί σας μόλις υπάρξει απάντηση');">
                     <br />
                   </div>
                 </form>
