--- a/Lykeio.html
+++ b/Lykeio.html
@@ -86,7 +86,7 @@
                     <textarea id="faq-question" rows="10" cols="44" maxlength="420" wrap="soft" placeholder="Enter your query..." required></textarea>
                     <br />
                     <br />
-                    <input type="submit" class="btn" value="Submit" onclick="form.reset(); alert('Thanks for your question! I will get back to you as soon as I can.');">
+                    <input type="submit" class="btn" value="Submit" onclick="form.reset(); alert('Ευχαριστούμε για την ερώτηση! Θα επικοινωνήσουμε μαζί σας μόλις υπάρξει απάντηση');">
                     <br />
                   </div>
                 </form>
