--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,11 @@
 		</div>
             <nav>
               <ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">Κεντρική</a></li>
 				<li><a href="Dimotiko.html">Δημοτικό</a></li>
 				<li><a href="Gimnasio.html">Γυμνάσιο</a></li>
 				<li><a href="Lykeio.html">Λύκειο</a></li>
-				<li class="current"><a href="contact.html">Contact</a></li>
+				<li class="current"><a href="contact.html">Επικοινωνία</a></li>
 				<li><a onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Σύνδεση</a></li>
 			</ul>
             </nav>
