--- a/Dimotiko.html
+++ b/Dimotiko.html
@@ -30,7 +30,7 @@
 				<li><a href="Gimnasio.html">Γυμνάσιο</a></li>
 				<li><a href="Lykeio.html">Λύκειο</a></li>
         <li><a href="contact.html">Επικοινωνία</a></li>
-        <li><button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Σύνδεση</button></li>
+        <li><a onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Σύνδεση</a></li>
 
               </ul>
             </nav>
@@ -40,50 +40,55 @@
       <section>
         <div class="container">
           <article id="main-col">
-            <h1 id="faq-title" class="page-title">Frequently Asked Questions</h1>
+            <h1 id="faq-title" class="page-title">Οι Πιο Συνηθισμένες Ερωτήσεις της Βαθμίδας</h1>
             <ul id="faq-list">
 
-          <button class="accordion"><h3>Q.  Τί είναι η τετραγωνική ρίζα ενός αριθμού;</h3></button>
+          <button class="accordion"><h3>Q.  Τί είναι η πρόσθεση;</h3></button>
             <div class="panel">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Η πρόσθεση είναι μία μαθηματική πράξη, που αντιπροσωπεύει το συνολικό ποσό των αντικειμένων, μαζί, σε μια συλλογή.</p>
             </div>
 
-          <button class="accordion"><h3>Q.  Can you come shoot in X place?</h3></button>
+          <button class="accordion"><h3>Q.  Τί είναι η αφαίρεση;</h3></button>
             <div class="panel">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Η αφαίρεση είναι μια από τις τέσσερις βασικές αριθμητικέ πράξεις, και είναι η αντίθετη της πρόσθεση, σημαίνει ότι αν αρχίσουμε με οποιοδήποτε αριθμό και προσθέσουμε οποιονδήποτε και μετά αφαιρέσουμε τον ίδιο αριθμό που προσθέσαμε, επιστρέφουμε στον αριθμό που αρχίσαμε.</p>
             </div>
 
-          <button class="accordion"><h3>Q.  If you could pick anywhere in the world to shoot, where would you go?</h3></button>
+          <button class="accordion"><h3>Q.  Τί είναι ο πολλαπλασιασμός;</h3></button>
             <div class="panel">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Ο πολλαπλασιασμός είναι η μαθηματική πράξη της κλιμάκωσης ενός αριθμού από έναν άλλο.</p>
             </div>
 
-          <button class="accordion"><h3>Q.  What's your favorite subject(s) to shoot?</h3></button>
+          <button class="accordion"><h3>Q.  Τί είναι η διαίρεση;</h3></button>
             <div class="panel">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Είναι ο πολλαπλασιασμός ενός αριθμού με τον αντίστροφο ενός άλλου.</p>
+            </div>
+
+          <button class="accordion"><h3>Q.  Τί είναι το κλάσμα;</h3></button>
+            <div class="panel">
+              <p>Είναι η έννοια του κομματιού του μέρους ενός συνόλου.</p>
             </div>
           </ul>
           </article>
 
           <aside id="sidebar">
             <div class="dark">
-              <h3 style="text-align: center; text-decoration: underline;">Question not already answered?</h3>
+              <h3 style="text-align: center; text-decoration: underline;">Ερώτηση στην οποία δεν έχεις βρει απάντηση;</h3>
               <p>
                 <form class="message">
                   <div>
-                    <label>Name:</label>
+                    <label>Όνομα:</label>
                     <br /><br />
-                    <input id="input-name" type="text" size="44" placeholder="Enter your name..." required />
+                    <input id="input-name" type="text" size="44" placeholder="Πληκτρολογίστε το όνομα σας..." required />
                     <br /><br />
                     <label>Email:</label>
                     <br /><br />
-                    <input id="input-email" type="email" size="44" placeholder="Enter your email..." required />
+                    <input id="input-email" type="email" size="44" placeholder="Πληκτρολογίστε το email σας..." required />
                     <br /><br />
-                    <label>Message:</label>
+                    <label>Ερώτηση:</label>
                     <br /><br />
-                    <textarea id="faq-question" rows="10" cols="44" maxlength="420" wrap="soft" placeholder="Enter your query..." required></textarea>
+                    <textarea id="faq-question" rows="10" cols="44" maxlength="420" wrap="soft" placeholder="Μοιραστείτε την απορία σας..." required></textarea>
                     <br /><br />
-                    <input type="submit" class="btn" value="Submit" onclick="form.reset(); alert('Ευχαριστούμε για την ερώτηση! Θα επικοινωνήσουμε μαζί σας μόλις υπάρξει απάντηση');">
+                    <input type="submit" class="btn" value="Καταχώρηση" onclick="form.reset(); alert('Ευχαριστούμε για την ερώτηση! Θα επικοινωνήσουμε μαζί σας μόλις υπάρξει απάντηση');">
                     <br />
                   </div>
                 </form>
