--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,9 @@
 					  <div>
 						<br />
 						<input id="input-name" type="text" size="64" placeholder="Πληκτρολογίστε το όνομα σας..." required />
-						<br />
-						<br />
+                    	<br /><br />
+                    	<input id="input-class" type="text" size="44" placeholder="Πληκτρολογίστε την τάξη σας..." required />
+                    	<br /><br />
 						<input id="input-email" type="email" size="44" placeholder="Πληκτρολογίστε το email σας..." required />
 						<br />
 						<br />
