--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 	  </div>
 	</header>
 		
-	<div class="title">
-		<h1>Καλώς ήρθατε στο ταξίδι της γνώσης!</h1>
+	<div id="faq-title" class="page-title">
+		<h2>Καλώς ήρθατε στο ταξίδι της γνώσης!</h2>
 		</br></br></br></br>
-		<h1>Μοιραστείτε και λύστε τις απορίες σας</h1>
+		<h2>Μοιραστείτε και λύστε τις απορίες σας</h2>
 		<div class="button">
 			</br></br></br></br>
 			<a href="contact.html" class="btn">Υποβολή Αποριών</a>
