--- a/Lykeio.html
+++ b/Lykeio.html
@@ -39,34 +39,50 @@
 
       <section>
         <div class="container">
-          <article id="main-col">
+         <article id="main-col">
             <h1 id="faq-title" class="page-title">Οι Πιο Συνηθισμένες Ερωτήσεις της Βαθμίδας</h1>
             <ul id="faq-list">
 
-          <button class="accordion"><h3>Q.  Τί είναι ο μιγαδικός αριθμός;</h3></button>
-            <div class="panel">
-              <p>Οι μιγαδικοί αριθμοί είναι μία επέκταση του συνόλου των πραγματικών αριθμών με την προσθήκη ενός στοιχείου, που λέγεται φανταστικός αριθμός.</p>
-            </div>
+              <div id="container">
+                <div class="accordion">
+                  <label for="tm" class="accordionitem"><h2>Q.  Τί ονομάζεται μονοτονία μιας συνάρτησης;<span class="arrow">&raquo;</span></h2></label>
+                  <input type="checkbox" id="tm1"/>
+                  <p class="hiddentext">Η μονοτονία μιας συνάρτησης αναφέρεται ποιοτικά στην κατεύθυνση της 
+                    μεταβολής των τιμών της στο πεδίο ορισμού της ή σε τμήμα αυτού.</p>
+                </div>
+                <div id="container">
+                  <div class="accordion">
+                    <label for="tm" class="accordionitem"><h2>Q.  Τί είναι το ολοκλήρωμα μιας συνάρτησης;<span class="arrow">&raquo;</span></h2></label>
+                    <input type="checkbox" id="tm2"/>
+                    <p class="hiddentext">Είναι το αντίστροφο της παραγώγου μιας συνάρτησης. Πιο συγκεκριμένα, 
+                      ένα όριο που προσεγγίζει την επιφάνεια (μήκος, όγκο κ.λπ.) μιας καμπυλόγραμμης περιοχής 
+                      με το να σπάει την περιοχή σε κάθετες λωρίδες.</p>
+                  </div>
 
-          <button class="accordion"><h3>Q.  Τί είναι η συνάρτηση;</h3></button>
-            <div class="panel">
-              <p>Στα μαθηματικά, συνάρτηση, ή απεικόνιση είναι μια αντιστοίχιση μεταξύ δύο συνόλων, που καλούνται σύνολο ορισμού και σύνολο τιμών, κατά την οποία κάθε ένα στοιχείο του πεδίου ορισμού αντιστοιχίζεται σε ένα και μόνο στοιχείο του πεδίου τιμών.</p>
-            </div>
+                  <div id="container">
+                    <div class="accordion">
+                      <label for="tm" class="accordionitem"><h2>Q.  Τί είναι η παράγωγος μιας συνάρτησης;<span class="arrow">&raquo;</span></h2></label>
+                      <input type="checkbox" id="tm3"/>
+                      <p class="hiddentext">Η παράγωγος μιας συνάρτησης (f(x)) είναι ένα μέτρο, που εκφράζει τη μεταβολή 
+                        της τιμής (y = f(x)) της συνάρτησης, η οποία προσδιορίζεται από μια άλλη ποσότητα (x).</p>
+                    </div>
 
-          <button class="accordion"><h3>Q.  Τί είναι η παράγωγος μιας συνάρτησης;</h3></button>
-            <div class="panel">
-              <p>Η παράγωγος μιας συνάρτησης (f(x)) είναι ένα μέτρο, που εκφράζει τη μεταβολή της τιμής (y = f(x)) της συνάρτησης, η οποία προσδιορίζεται από μια άλλη ποσότητα (x).</p>
-            </div>
+                    <div id="container">
+                      <div class="accordion">
+                        <label for="tm" class="accordionitem"><h2>Q.  Τί είναι η συνάρτηση;<span class="arrow">&raquo;</span></h2></label>
+                        <input type="checkbox" id="tm4"/>
+                        <p class="hiddentext">Στα μαθηματικά, συνάρτηση, ή απεικόνιση είναι μια αντιστοίχιση μεταξύ δύο 
+                          συνόλων, που καλούνται σύνολο ορισμού και σύνολο τιμών, κατά την οποία κάθε ένα στοιχείο του 
+                          πεδίου ορισμού αντιστοιχίζεται σε ένα και μόνο στοιχείο του πεδίου τιμών.</p>
+                      </div>
 
-          <button class="accordion"><h3>Q.  Τί είναι το ολοκλήρωμα μιας συνάρτησης;</h3></button>
-            <div class="panel">
-              <p>Είναι το αντίστροφο της παραγώγου μιας συνάρτησης. Πιο συγκεκριμένα, ένα όριο που προσεγγίζει την επιφάνεια (μήκος, όγκο κ.λπ.) μιας καμπυλόγραμμης περιοχής με το να σπάει την περιοχή σε κάθετες λωρίδες.</p>
-            </div>
-          
-          <button class="accordion"><h3>Q.  Τί ονομάζεται μονοτονία μιας συνάρτησης;</h3></button>
-            <div class="panel">
-              <p>Η μονοτονία μιας συνάρτησης αναφέρεται ποιοτικά στην κατεύθυνση της μεταβολής των τιμών της στο πεδίο ορισμού της ή σε τμήμα αυτού.</p>
-            </div>
+                      <div id="container">
+                        <div class="accordion">
+                          <label for="tm" class="accordionitem"><h2>Q.  Τί είναι ο μιγαδικός αριθμός;<span class="arrow">&raquo;</span></h2></label>
+                          <input type="checkbox" id="tm5"/>
+                          <p class="hiddentext">Οι μιγαδικοί αριθμοί είναι μία επέκταση του συνόλου των πραγματικών 
+                            αριθμών με την προσθήκη ενός στοιχείου, που λέγεται φανταστικός αριθμός.</p>
+                        </div>
           </ul>
           </article>
 
@@ -79,6 +95,10 @@
                     <label>Όνομα:</label>
                     <br /><br />
                     <input id="input-name" type="text" size="44" placeholder="Πληκτρολογίστε το όνομα σας..." required />
+                    <br /><br />
+                    <label>Τάξη:</label>
+                    <br /><br />
+                    <input id="input-class" type="text" size="44" placeholder="Πληκτρολογίστε την τάξη σας..." required />
                     <br /><br />
                     <label>Email:</label>
                     <br /><br />
